<?xml version="1.0"?>
<package>
  <name>vigir_ar_alvar_description</name>
  <version>0.0.0</version>
  <description>The vigir_ar_alvar_description package</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
<!--  <run_depend>gazebo_ros</run_depend>-->

  <export>
    <!--<gazebo_ros gazebo_media_path="${prefix}"/>-->
  </export>
  
</package>